resources/tests/valid_syntax/var_decl.ct
//Compilation successful!
fn hello()->i32
{
  var read = 10;
  var reada = 11;
  var readb = 11;
  {
    var readc = 11;
  }
}