resources/tests/invalid_syntax/fn_call_exist.ct
//`Function of name 'a' does not exist!
//1
fn hello()->void {
  a();
}